cmake_minimum_required(VERSION 3.12)
project(hello_world_c C)

set(CMAKE_C_STANDARD 11)

add_executable(str_concat string/str_concat.c)
add_executable(preprocessor c11/preprocessor.c)
add_executable(storage_class c11/storage_class.c)
add_executable(operator c11/operator.c)
add_executable(enum c11/enum.c)
add_executable(pointer c11/pointer.c)
add_executable(string c11/string.c)
add_executable(struct c11/struct.c)
add_executable(union c11/union.c)
add_executable(io c11/io.c)
add_executable(io_file c11/io_file.c)
add_executable(error_handling c11/error_handling.c)
add_executable(function c11/function.c)