cmake_minimum_required(VERSION 3.12)
project(hello_world_c C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(c11)
add_subdirectory(string)
add_subdirectory(socket)
add_subdirectory(pthread)
add_subdirectory(process)
add_subdirectory(io)
add_subdirectory(encoding)

find_package(cJSON REQUIRED)
if (cJSON_FOUND)
    message(STATUS "cJSON found")
    message("CJSON_INCLUDE_DIRS: ${CJSON_INCLUDE_DIRS}")
    message("CJSON_LIBRARIES: ${CJSON_LIBRARIES}")
else()
    message(FATAL_ERROR "cJSON not found")
endif()

add_executable(test test.c)
target_include_directories(test PUBLIC ${CJSON_INCLUDE_DIRS})
target_link_libraries(test PUBLIC ${CJSON_LIBRARIES})