add_executable(preprocessor preprocessor.c)
add_executable(storage_class storage_class.c storage_class_extern.c)
add_executable(operator operator.c)
add_executable(enum enum.c)
add_executable(pointer pointer.c)
add_executable(string string.c)
add_executable(struct struct.c)
add_executable(union union.c)
add_executable(io io.c)
add_executable(io_file io_file.c)
add_executable(error_handling error_handling.c)
add_executable(function function.c)
add_executable(array array.c)