[package]
name = "tokio-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "async-cross-threads"
path = "src/async-cross-threads.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"